Restructure project directory

--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,8 @@
 {
   "tasks": {
-    "dev": "deno run --watch --allow-run main.ts",
-    "start": "deno run --allow-run main.ts",
-    "build:script": "deno compile --allow-run --output dist/pr-parser main.ts",
+    "dev": "deno run --watch --allow-run src/main.ts",
+    "start": "deno run --allow-run src/main.ts",
+    "build:script": "deno compile --allow-run --output dist/pr-parser src/main.ts",
     "build:app": "deno task build:script && cp dist/pr-parser ./app/PRParser.app/script",
     "build:install": "deno task build:app && rm -rf /Applications/PRParser.app && cp -R app/PRParser.app /Applications/PRParser.app"
   },
